tests/paczka1/fuzzy1/78885966.err
Error in line 3: Awo A612 87,6
Error in line 4: DKYBYh0H A113 44,3
Error in line 18: aW0lFi1m20L A113 20,5
Error in line 34: aW0lFi1m20L A113 61,0
Error in line 19: Awo S533 43,0
